--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ body{
 }
 .container{
     box-shadow: 0 0 10px var(--shd);
-    min-width: 350px;
-    max-width: 350px;
+    min-width: 400px;
+    max-width: 400px;
     border-radius: 5px;
     overflow: hidden;
     position: relative;
@@ -119,6 +119,7 @@ body{
     padding: var(--pd) 5px var(--pd) var(--pd);
     width: 100%;
     min-height: 280px;
+    height: 50vh;
     position: relative;
     z-index: 8;
 }
@@ -176,7 +177,7 @@ body{
     .menus>#about{right: 15%;}
 }
 @media screen and (max-width: 650px) {
-    #root{font-size: 14px;}
+    .container{min-width: 350px; max-width: 350px;}
     .menus>#menu, .menus>#confirm{right: 15%;}
     .submenu>li{padding: 5px 15px;}
     .menus>#about{max-width: 35ch;}
